--- a/.github/workflows/build.aws.yml
+++ b/.github/workflows/build.aws.yml
@@ -25,4 +25,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: npm run ci
     - run: npm run build
