--- a/.github/workflows/build.aws.yml
+++ b/.github/workflows/build.aws.yml
@@ -1,12 +1,10 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Build on AWS
+name: Build & deploy Develop on AWS EC2
 
 on:
   push:
-    branches: [ "develop" ]
-  pull_request:
     branches: [ "develop" ]
 
 jobs:
